partially finish header recreate

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="variables.css">
         <link rel="stylesheet" href="main.css">
         <title>My portfolio</title>
     </head>
@@ -14,28 +15,110 @@
                             <path d="M1 2.75A.75.75 0 0 1 1.75 2h12.5a.75.75 0 0 1 0 1.5H1.75A.75.75 0 0 1 1 2.75Zm0 5A.75.75 0 0 1 1.75 7h12.5a.75.75 0 0 1 0 1.5H1.75A.75.75 0 0 1 1 7.75ZM1.75 12h12.5a.75.75 0 0 1 0 1.5H1.75a.75.75 0 0 1 0-1.5Z"></path>
                         </svg>
                     </button>
-                    <div class="header-logo"></div>
+                    <div class="header-logo">
+                        <div style="width: 64px; height: 32px; margin-left: var(--base-size-8,8px);">
+                            <svg viewBox="0 0 402 180" xmlns="http://www.w3.org/2000/svg" width="64" height="32">
+                                <g transform="matrix(1, 0, 0, 1, -7.105427357601002e-15, 0)">
+                                <path d="M 208.17 133.99 L 208.17 131.98 L 215.44 131.96 L 215.44 138.34 Q 213.77 139.67 211.99 140.35 Q 210.21 141.02 208.33 141.02 Q 205.8 141.02 203.73 139.94 Q 201.66 138.85 200.61 136.8 Q 199.55 134.75 199.55 132.22 Q 199.55 129.71 200.6 127.54 Q 201.65 125.37 203.62 124.31 Q 205.59 123.26 208.16 123.26 Q 210.02 123.26 211.53 123.86 Q 213.03 124.46 213.89 125.54 Q 214.74 126.62 215.19 128.35 L 213.14 128.92 Q 212.75 127.6 212.18 126.85 Q 211.6 126.1 210.53 125.65 Q 209.47 125.2 208.17 125.2 Q 206.61 125.2 205.47 125.68 Q 204.34 126.15 203.64 126.92 Q 202.94 127.7 202.55 128.62 Q 201.9 130.22 201.9 132.08 Q 201.9 134.38 202.69 135.92 Q 203.48 137.47 204.99 138.22 Q 206.5 138.97 208.2 138.97 Q 209.68 138.97 211.09 138.4 Q 212.49 137.83 213.22 137.19 L 213.22 133.99 Z M 224.42 140.73 L 224.42 138.9 Q 222.97 141.01 220.47 141.01 Q 219.37 141.01 218.42 140.59 Q 217.46 140.17 217 139.53 Q 216.54 138.89 216.35 137.96 Q 216.22 137.34 216.22 135.99 L 216.22 128.28 L 218.33 128.28 L 218.33 135.19 Q 218.33 136.84 218.46 137.41 Q 218.66 138.24 219.3 138.72 Q 219.95 139.19 220.89 139.19 Q 221.84 139.19 222.68 138.71 Q 223.51 138.22 223.85 137.38 Q 224.2 136.55 224.2 134.95 L 224.2 128.28 L 226.31 128.28 L 226.31 140.73 Z M 232.45 138.84 L 232.76 140.71 Q 231.87 140.89 231.16 140.89 Q 230.01 140.89 229.38 140.53 Q 228.75 140.17 228.49 139.57 Q 228.23 138.98 228.23 137.08 L 228.23 129.92 L 226.69 129.92 L 226.69 128.28 L 228.23 128.28 L 228.23 125.2 L 230.33 123.94 L 230.33 128.28 L 232.45 128.28 L 232.45 129.92 L 230.33 129.92 L 230.33 137.2 Q 230.33 138.1 230.44 138.36 Q 230.55 138.62 230.81 138.77 Q 231.06 138.92 231.53 138.92 Q 231.88 138.92 232.45 138.84 Z M 234.6 140.73 L 234.6 123.55 L 236.71 123.55 L 236.71 129.71 Q 238.19 128 240.44 128 Q 241.82 128 242.84 128.55 Q 243.86 129.09 244.3 130.05 Q 244.74 131.01 244.74 132.84 L 244.74 140.73 L 242.63 140.73 L 242.63 132.84 Q 242.63 131.26 241.94 130.54 Q 241.26 129.82 240 129.82 Q 239.07 129.82 238.24 130.31 Q 237.41 130.79 237.06 131.62 Q 236.71 132.46 236.71 133.92 L 236.71 140.73 Z M 246.2 125.98 L 246.2 123.55 L 248.3 123.55 L 248.3 125.98 Z M 246.2 140.73 L 246.2 128.28 L 248.3 128.28 L 248.3 140.73 Z M 254.88 140.73 L 252.93 140.73 L 252.93 123.55 L 255.04 123.55 L 255.04 129.68 Q 256.37 128 258.45 128 Q 259.6 128 260.62 128.47 Q 261.65 128.93 262.31 129.77 Q 262.97 130.6 263.35 131.79 Q 263.72 132.97 263.72 134.32 Q 263.72 137.52 262.14 139.26 Q 260.56 141.01 258.34 141.01 Q 256.14 141.01 254.88 139.17 Z M 254.86 134.41 Q 254.86 136.65 255.47 137.65 Q 256.47 139.28 258.17 139.28 Q 259.55 139.28 260.56 138.07 Q 261.56 136.87 261.56 134.49 Q 261.56 132.06 260.6 130.9 Q 259.63 129.74 258.26 129.74 Q 256.88 129.74 255.87 130.94 Q 254.86 132.14 254.86 134.41 Z" transform="matrix(2.85077, 0, 0, 2.46407, -456.547004, -175.276004)" style="fill: rgb(255, 255, 255); stroke: rgb(0, 0, 0); stroke-width: 0px;"/>
+                                <path d="M 77 5 L 118 5 L 118 121 L 77 121 L 77 5 Z M 3.5140000000000002 31.747 L 34.922 5.392 L 109.486 94.253 L 78.078 120.608 L 3.5140000000000002 31.747 Z M 1 4 L 42 4 L 42 120 L 1 120 L 1 4 Z" stroke="#000" id="svg_3" fill="#fff"/>
+                                <path d="M 324 47 L 365 47 L 365 119 L 324 119 L 324 47 Z M 401.5 5.5 L 401.5 46.5 L 285.5 46.5 L 285.5 5.5 L 401.5 5.5 Z" stroke="#000" id="svg_8" fill="#ffffff"/>
+                                <path d="M 228.151 113.575 C 198.118 124.717 164.973 109.316 154.119 79.177 C 143.264 49.038 158.81 15.573 188.843 4.431 C 218.875 -6.71 252.02 8.69 262.875 38.829 C 273.729 68.968 258.183 102.433 228.151 113.575 Z M 208.124 32.972 C 193.55 32.972 181.736 44.531 181.736 58.789 C 181.736 73.047 193.55 84.606 208.124 84.606 C 222.697 84.606 234.511 73.047 234.512 58.789 C 234.512 44.531 222.697 32.972 208.124 32.972 Z" id="svg_4" fill="#fff" style="" stroke="#000"/>
+                                </g>
+                            </svg>
+                        </div>
+                    </div>
                     <div class="header-title">
                         <div class="header-title-compact"><!--for mobile-->
-
-                        </div>
-                        <div class="header-title-full">
                             <a>
+                                <span class="title-compact-lead">
+                                    <span>Repo /</span>
+                                </span>
                                 <strong>Federer Yang</strong>
                             </a>
+                        </div>
+                        <div class="header-title-full">
+                            <ul>
+                                <li>
+                                    <a href="/">Repo</a>
+                                    <span class="separator">/</span>
+                                </li>
+                                <li>
+                                    <a href="/">Federer Yang</a>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
                 <div class="header-end">
+                    <div class="search-input">
+                        <script>
+                            var searchbox = document.getElementsByClassName("search-input")[0];
+                            console.log(searchbox);
+                            searchbox.addEventListener("focusin", function(e){
+                                searchbox.classList.add("input-focus");
+                            });
+                            searchbox.addEventListener("focusout", function(e){
+                                searchbox.classList.remove("input-focus");
+                            });
+                        </script>
+                        <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" data-view-component="true" class="octicon octicon-search">
+                            <path d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"></path>
+                        </svg>
+                        <input placeholder="Search doggo" />
+                    </div>
                     <button aria-label="Open search" type="button" class="app-header-button">
                         <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" data-view-component="true" class="octicon octicon-search">
                             <path d="M10.68 11.74a6 6 0 0 1-7.922-8.982 6 6 0 0 1 8.982 7.922l3.04 3.04a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215ZM11.5 7a4.499 4.499 0 1 0-8.997 0A4.499 4.499 0 0 0 11.5 7Z"></path>
                         </svg>
                     </button>
                     <div class="header-pfp">
-                        
+                        <button aria-label="Open user menu" type="button" class="Button">
+                            <span class="Button-content">
+                                <span class="Button-label">
+                                    <img src="https://avatars.githubusercontent.com/u/79208778?v=4" alt="" size="32" height="32" width="32" class="avatar circle">
+                                </span>
+                            </span>
+                        </button>
                     </div>  
                 </div>
+            </div>
+            <div class="local">
+                <nav class="underline-nav">
+                    <ul>
+                        <li class="selected">
+                            <a>
+                                <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" class="underline-nav-octicon">
+                                    <path d="M0 1.75A.75.75 0 0 1 .75 1h4.253c1.227 0 2.317.59 3 1.501A3.743 3.743 0 0 1 11.006 1h4.245a.75.75 0 0 1 .75.75v10.5a.75.75 0 0 1-.75.75h-4.507a2.25 2.25 0 0 0-1.591.659l-.622.621a.75.75 0 0 1-1.06 0l-.622-.621A2.25 2.25 0 0 0 5.258 13H.75a.75.75 0 0 1-.75-.75Zm7.251 10.324.004-5.073-.002-2.253A2.25 2.25 0 0 0 5.003 2.5H1.5v9h3.757a3.75 3.75 0 0 1 1.994.574ZM8.755 4.75l-.004 7.322a3.752 3.752 0 0 1 1.992-.572H14.5v-9h-3.495a2.25 2.25 0 0 0-2.25 2.25Z"></path>
+                                </svg>
+                                <span>Overview</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a>
+                                <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" class="underline-nav-octicon">
+                                    <path d="M2 2.5A2.5 2.5 0 0 1 4.5 0h8.75a.75.75 0 0 1 .75.75v12.5a.75.75 0 0 1-.75.75h-2.5a.75.75 0 0 1 0-1.5h1.75v-2h-8a1 1 0 0 0-.714 1.7.75.75 0 1 1-1.072 1.05A2.495 2.495 0 0 1 2 11.5Zm10.5-1h-8a1 1 0 0 0-1 1v6.708A2.486 2.486 0 0 1 4.5 9h8ZM5 12.25a.25.25 0 0 1 .25-.25h3.5a.25.25 0 0 1 .25.25v3.25a.25.25 0 0 1-.4.2l-1.45-1.087a.249.249 0 0 0-.3 0L5.4 15.7a.25.25 0 0 1-.4-.2Z"></path>
+                                </svg>
+                                <span>Repositories</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a>
+                                <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" class="underline-nav-octicon">
+                                    <path d="M0 1.75C0 .784.784 0 1.75 0h12.5C15.216 0 16 .784 16 1.75v12.5A1.75 1.75 0 0 1 14.25 16H1.75A1.75 1.75 0 0 1 0 14.25ZM6.5 6.5v8h7.75a.25.25 0 0 0 .25-.25V6.5Zm8-1.5V1.75a.25.25 0 0 0-.25-.25H6.5V5Zm-13 1.5v7.75c0 .138.112.25.25.25H5v-8ZM5 5V1.5H1.75a.25.25 0 0 0-.25.25V5Z"></path>
+                                </svg>
+                                <span>Projects</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a>
+                                <svg aria-hidden="true" height="16" viewBox="0 0 16 16" version="1.1" width="16" class="underline-nav-octicon">
+                                    <path d="m8.878.392 5.25 3.045c.54.314.872.89.872 1.514v6.098a1.75 1.75 0 0 1-.872 1.514l-5.25 3.045a1.75 1.75 0 0 1-1.756 0l-5.25-3.045A1.75 1.75 0 0 1 1 11.049V4.951c0-.624.332-1.201.872-1.514L7.122.392a1.75 1.75 0 0 1 1.756 0ZM7.875 1.69l-4.63 2.685L8 7.133l4.755-2.758-4.63-2.685a.248.248 0 0 0-.25 0ZM2.5 5.677v5.372c0 .09.047.171.125.216l4.625 2.683V8.432Zm6.25 8.271 4.625-2.683a.25.25 0 0 0 .125-.216V5.677L8.75 8.432Z"></path>                                
+                                </svg>
+                                <span>Packages</span>
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
             </div>
         </header>
     </body>
